--- a/redeem-code.mdx
+++ b/redeem-code.mdx
@@ -50,4 +50,4 @@ In this guide you will learn how to use a redeem code.
 <Check>Congrats! You have successfully used a redeem code!</Check>
 
 ### Credits:
-* Builder1607: Making the full content, including images.
+* Builder1607: Making the content, including images.
