--- a/create-a-server.mdx
+++ b/create-a-server.mdx
@@ -1,1 +1,61 @@
+---
+title: Creating a Server
+description: How to create a Minecraft Server on Wraithnodes.
+icon: ""
+---
 
+In this guide you will learn how to create a free Minecraft Server.
+
+<Steps>
+  <Step title="Step 1:">
+    <Card title="Go to the dashboard" icon="link" href="https://dash.wraithnodes.net">
+      Clicking on this button will redirect you to the dashboard.
+    </Card>
+    <img
+      className="block rounded-md"
+      src="/images/createserver/1.jpg"
+      alt="Step 1"
+    />
+  </Step>
+  <Step title="Step 2:">
+    <Card title="Go to the Create Server section" icon="link" href="https://dash.wraithnodes.net/create">
+      Clicking on this button will redirect you to Shop page on the dashboard.
+    </Card>
+    <img
+      className="block rounded-md"
+      src="/images/createserver/2.jpg"
+      alt="Step 2"
+    />
+  </Step>
+  <Step title="Step 3:">
+    Enter now a name for your server and how many resources the server can use."
+    <img
+      className="block rounded-md"
+      src="/images/createserver/3.jpg"
+      alt="Step 3"
+    />
+  </Step>
+  <Step title="Step 4:">
+    Select now on which node you want to create your server and choose Primectyl as software unless you bought premium eggs.
+  <Info>You can buy Premium Eggs in the Shop</Info>
+    <img
+      className="block rounded-md"
+      src="/images/createserver/4.jpg"
+      alt="Step 4"
+    />
+  </Step>
+  </Step>
+  <Step title="Step 4:">
+    Click Create Server at the bottom.
+    <img
+      className="block rounded-md"
+      src="/images/createserver/4.jpg"
+      alt="Step 4"
+    />
+  </Step>
+</Steps>
+
+<Check>Congrats! You have successfully created a Server!</Check>
+
+### Credits:
+* Builder1607: Making the content, including images.
